[package]
name = "harmony-reflector"
version = "0.1.0"
authors = ["Rafael Bachmann <mediumendian@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


[dependencies.pitch_calc]
git = "https://github.com/RustAudio/pitch_calc"
